chore: adjusts and create dockerfile